tests/snapshots/formatting__format_describe_query.snap
---
source: tests/formatting.rs
expression: "response[\"result\"]"
---
[
  {
    "newText": "DESCRIBE ",
    "range": {
      "end": {
        "character": 9,
        "line": 0
      },
      "start": {
        "character": 0,
        "line": 0
      }
    }
  }
]
