tests/snapshots/formatting__format_with_prefix.snap
---
source: tests/formatting.rs
expression: "response[\"result\"]"
---
[
  {
    "newText": "\n",
    "range": {
      "end": {
        "character": 62,
        "line": 0
      },
      "start": {
        "character": 62,
        "line": 0
      }
    }
  },
  {
    "newText": " ",
    "range": {
      "end": {
        "character": 60,
        "line": 0
      },
      "start": {
        "character": 59,
        "line": 0
      }
    }
  },
  {
    "newText": " ",
    "range": {
      "end": {
        "character": 52,
        "line": 0
      },
      "start": {
        "character": 51,
        "line": 0
      }
    }
  },
  {
    "newText": "\n  ",
    "range": {
      "end": {
        "character": 49,
        "line": 0
      },
      "start": {
        "character": 49,
        "line": 0
      }
    }
  },
  {
    "newText": " WHERE ",
    "range": {
      "end": {
        "character": 48,
        "line": 0
      },
      "start": {
        "character": 42,
        "line": 0
      }
    }
  },
  {
    "newText": " ",
    "range": {
      "end": {
        "character": 40,
        "line": 0
      },
      "start": {
        "character": 40,
        "line": 0
      }
    }
  },
  {
    "newText": "\nSELECT ",
    "range": {
      "end": {
        "character": 38,
        "line": 0
      },
      "start": {
        "character": 32,
        "line": 0
      }
    }
  },
  {
    "newText": " ",
    "range": {
      "end": {
        "character": 11,
        "line": 0
      },
      "start": {
        "character": 11,
        "line": 0
      }
    }
  },
  {
    "newText": "PREFIX ",
    "range": {
      "end": {
        "character": 7,
        "line": 0
      },
      "start": {
        "character": 0,
        "line": 0
      }
    }
  }
]
